--- a/projet.ipynb
+++ b/projet.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 356,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 357,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,43 +175,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sous_echantillonage(matrice):\n",
-    "    \n",
-    "    new_len_col = len(matrice[1]) // 2\n",
-    "\n",
-    "    # Sous-échantillonner la matrice\n",
-    "    matrice_se = [[i for i in range(new_len_col)] for i in range(len(matrice))]\n",
-    "    for i in range(len(matrice)):\n",
-    "        for j in range(0,len(matrice[1]),2):\n",
-    "            new_value = (matrice[i][j] + matrice[i][j+1])/2\n",
-    "            matrice_se[i][j//2] = new_value\n",
-    "\n",
-    "    return matrice_se"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 175,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def sous_echantillonnage2(matrice):\n",
+    "def sous_echantillonnage(matrice):\n",
     "    matrice = np.array(matrice, dtype='float64')\n",
-    "    new_len_col = len(matrice[0]) // 2\n",
-    "\n",
-    "    # Sous-échantillonner la matrice\n",
-    "    matrice_se = np.zeros((matrice.shape[0], new_len_col))\n",
+    "    for i in range(matrice.shape[0]):\n",
+    "        for j in range(0, matrice.shape[1]):\n",
+    "            matrice[i, j, 1] = 0\n",
+    "            matrice[i, j, 2] = 0\n",
     "    for i in range(matrice.shape[0]):\n",
     "        for j in range(0, matrice.shape[1], 2):\n",
-    "            print(i,j)\n",
-    "            new_value = (matrice[i][j] + matrice[i][j+1])/2\n",
-    "            matrice_se[i][j//2] = new_value\n",
-    "\n",
-    "    return matrice_se"
+    "            new_valueCb = (matrice[i][j][1] + matrice[i][j+1][1])//2\n",
+    "            new_valueCr = (matrice[i][j][2] + matrice[i][j+1][2])//2\n",
+    "            matrice[i, j//2, 1] = new_valueCb\n",
+    "            matrice[i, j//2, 2] = new_valueCr\n",
+    "    return matrice"
    ]
   },
   {
@@ -224,33 +204,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def mult_mat(matrice):\n",
-    "    matrice_mult = [[i for i in range(len(matrice[1])*2)] for i in range(len(matrice))]\n",
-    "    for i in range(len(matrice)):\n",
-    "        for j in range(0, len(matrice_mult[1]), 2):\n",
-    "            matrice_mult[i][j] = matrice[i][j//2]\n",
-    "            matrice_mult[i][j+1] = matrice[i][j//2]\n",
-    "    return matrice_mult"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "def mult_mat2(matrice):\n",
-    "    matrice_mult = np.zeros((matrice.shape[0], matrice.shape[1] * 2))\n",
+    "def mult_mat(matrice):\n",
+    "    matrice2 = matrice.copy()\n",
     "    for i in range(matrice.shape[0]):\n",
-    "        for j in range(matrice.shape[1]):\n",
-    "            matrice_mult[i][j] = matrice[i][j]\n",
-    "            matrice_mult[i][j+1] = matrice[i][j]\n",
-    "    return matrice_mult"
+    "        for j in range(0, matrice.shape[1]//2):\n",
+    "            matrice[i][j*2][1] = matrice2[i][j][1]\n",
+    "            matrice[i][j*2][2] = matrice2[i][j][2]\n",
+    "            matrice[i][j*2+1][1] = matrice2[i][j][1]\n",
+    "            matrice[i][j*2+1][2] = matrice2[i][j][2]\n",
+    "    return matrice"
    ]
   },
   {
@@ -263,10 +230,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 362,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "biboubibou boop\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('biboubibou boop')\n"
+   ]
   },
   {
    "attachments": {},
@@ -292,6 +269,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -301,55 +285,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 363,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 0\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "setting an array element with a sequence.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;31mTypeError\u001b[0m: only size-1 arrays can be converted to Python scalars",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_125260\\1739063584.py\u001b[0m in \u001b[0;36m<cell line: 14>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;31m#print(mult_mat(sous_echantillonage([[1,2,3,6],[3,5,10,0]])))\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m \u001b[0mImage\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfromarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msous_echantillonnage2\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpadded_image\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'RGB'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_125260\\3084122696.py\u001b[0m in \u001b[0;36msous_echantillonnage2\u001b[1;34m(matrice)\u001b[0m\n\u001b[0;32m      9\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m             \u001b[0mnew_value\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mmatrice\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mmatrice\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m             \u001b[0mmatrice_se\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m//\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnew_value\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mmatrice_se\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: setting an array element with a sequence."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test = load(\"test.png\")\n",
-    "#testYCbCr = YCbCR_en_RGB(RGB_en_YCbCR(test))\n",
+    "testYCbCr = YCbCR_en_RGB(RGB_en_YCbCR(test))\n",
     "#Image.fromarray(test,'RGB').show()\n",
     "#Image.fromarray(testYCbCr,'RGB').show()\n",
     "\n",
-    "padded_image = padding(test)\n",
+    "padded_image = padding(testYCbCr)\n",
     "\n",
     "#Image.fromarray(padded_image,'RGB').show()\n",
     "#Image.fromarray(unpadding(padded_image, test),'RGB').show()\n",
     "\n",
-    "#print(sous_echantillonnage2([[1,2,3,6],[3,5,10,0]]))\n",
-    "#print(mult_mat(sous_echantillonage([[1,2,3,6],[3,5,10,0]])))\n",
-    "\n",
-    "Image.fromarray(sous_echantillonnage2(padded_image),'RGB').show()"
+    "Image.fromarray(YCbCR_en_RGB(mult_mat(sous_echantillonnage(RGB_en_YCbCR(test)))),'RGB').show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
