--- a/projet.ipynb
+++ b/projet.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 454,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 455,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 456,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 457,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 458,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,20 +175,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 459,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sous_echantillonnage(matrice):\n",
-    "    matrice = np.array(matrice, dtype='float64')\n",
+    "    matrice2 = matrice.copy()\n",
     "    for i in range(matrice.shape[0]):\n",
     "        for j in range(0, matrice.shape[1]):\n",
     "            matrice[i, j, 1] = 0\n",
     "            matrice[i, j, 2] = 0\n",
     "    for i in range(matrice.shape[0]):\n",
     "        for j in range(0, matrice.shape[1], 2):\n",
-    "            new_valueCb = (matrice[i][j][1] + matrice[i][j+1][1])//2\n",
-    "            new_valueCr = (matrice[i][j][2] + matrice[i][j+1][2])//2\n",
+    "            new_valueCb = (matrice2[i][j][1] + matrice2[i][j+1][1])//2\n",
+    "            new_valueCr = (matrice2[i][j][2] + matrice2[i][j+1][2])//2\n",
     "            matrice[i, j//2, 1] = new_valueCb\n",
     "            matrice[i, j//2, 2] = new_valueCr\n",
     "    return matrice"
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 460,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 461,
    "metadata": {},
    "outputs": [
     {
@@ -285,9 +285,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 462,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "43.60365608263673\n"
+     ]
+    }
+   ],
    "source": [
     "test = load(\"test.png\")\n",
     "testYCbCr = YCbCR_en_RGB(RGB_en_YCbCR(test))\n",
@@ -299,7 +307,8 @@
     "#Image.fromarray(padded_image,'RGB').show()\n",
     "#Image.fromarray(unpadding(padded_image, test),'RGB').show()\n",
     "\n",
-    "Image.fromarray(YCbCR_en_RGB(mult_mat(sous_echantillonnage(RGB_en_YCbCR(test)))),'RGB').show()"
+    "Image.fromarray(YCbCR_en_RGB(mult_mat(sous_echantillonnage(RGB_en_YCbCR(test)))),'RGB').show()\n",
+    "print(psnr(test, YCbCR_en_RGB(mult_mat(sous_echantillonnage(RGB_en_YCbCR(test))))))"
    ]
   }
  ],
