--- a/projet.ipynb
+++ b/projet.ipynb
@@ -10,14 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "import PIL\n",
     "from PIL import Image\n",
     "import numpy as np\n",
-    "#import scipy as sp\n",
+    "import scipy as sp\n",
     "import os\n",
     "from math import log10, sqrt\n",
     "\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 458,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 460,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,21 +229,73 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 6 : Soit une matrice dont les deux dimensions sont divisibles par 8. Donner une fonction qui découpe cette matrice en blocs 8 × 8 et les stocke dans une liste. L’ordre des blocs correspond à l’ordre de lecture d’une image."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 461,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "biboubibou boop\n"
+      "[[  1   2   3   4   5   6   7   8   9  10  11  12  13  14  15  16]\n",
+      " [ 17  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32]\n",
+      " [ 33  34  35  36  37  38  39  40  41  42  43  44  45  46  47  48]\n",
+      " [ 49  50  51  52  53  54  55  56  57  58  59  60  61  62  63  64]\n",
+      " [ 65  66  67  68  69  70  71  72  73  74  75  76  77  78  79  80]\n",
+      " [ 81  82  83  84  85  86  87  88  89  90  91  92  93  94  95  96]\n",
+      " [ 97  98  99 100 101 102 103 104 105 106 107 108 109 110 111 112]\n",
+      " [113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128]]\n",
+      "[[array([1, 2, 3, 4, 5, 6, 7, 8]), array([17, 18, 19, 20, 21, 22, 23, 24]), array([33, 34, 35, 36, 37, 38, 39, 40]), array([49, 50, 51, 52, 53, 54, 55, 56]), array([65, 66, 67, 68, 69, 70, 71, 72]), array([81, 82, 83, 84, 85, 86, 87, 88]), array([ 97,  98,  99, 100, 101, 102, 103, 104]), array([113, 114, 115, 116, 117, 118, 119, 120])], [array([ 9, 10, 11, 12, 13, 14, 15, 16]), array([25, 26, 27, 28, 29, 30, 31, 32]), array([41, 42, 43, 44, 45, 46, 47, 48]), array([57, 58, 59, 60, 61, 62, 63, 64]), array([73, 74, 75, 76, 77, 78, 79, 80]), array([89, 90, 91, 92, 93, 94, 95, 96]), array([105, 106, 107, 108, 109, 110, 111, 112]), array([121, 122, 123, 124, 125, 126, 127, 128])]]\n"
      ]
     }
    ],
    "source": [
-    "print('biboubibou boop')\n"
+    "def decoupe_bloc(matrice):\n",
+    "    lignes = matrice.shape[0]\n",
+    "    colonnes = matrice.shape[1]\n",
+    "    blocs = []\n",
+    "    \n",
+    "    # Parcours des indices de début de chaque bloc\n",
+    "    for i in range(0, lignes, 8):\n",
+    "        for j in range(0, colonnes, 8):\n",
+    "            # Création d'un nouveau bloc vide\n",
+    "            bloc = []\n",
+    "            \n",
+    "            # Parcours des lignes du bloc\n",
+    "            for k in range(i, i + 8):\n",
+    "                # Extraction des éléments de la ligne correspondante\n",
+    "                ligne = matrice[k][j:j+8]\n",
+    "                # Ajout de la ligne au bloc\n",
+    "                bloc.append(ligne)\n",
+    "            \n",
+    "            # Ajout du bloc à la liste\n",
+    "            blocs.append(bloc)\n",
+    "    \n",
+    "    return blocs"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 7 : Donner une fonction qui applique la transformée à chaque bloc d’une liste"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
@@ -285,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 462,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
