--- a/projet.ipynb
+++ b/projet.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,25 +238,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 158,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[  1   2   3   4   5   6   7   8   9  10  11  12  13  14  15  16]\n",
-      " [ 17  18  19  20  21  22  23  24  25  26  27  28  29  30  31  32]\n",
-      " [ 33  34  35  36  37  38  39  40  41  42  43  44  45  46  47  48]\n",
-      " [ 49  50  51  52  53  54  55  56  57  58  59  60  61  62  63  64]\n",
-      " [ 65  66  67  68  69  70  71  72  73  74  75  76  77  78  79  80]\n",
-      " [ 81  82  83  84  85  86  87  88  89  90  91  92  93  94  95  96]\n",
-      " [ 97  98  99 100 101 102 103 104 105 106 107 108 109 110 111 112]\n",
-      " [113 114 115 116 117 118 119 120 121 122 123 124 125 126 127 128]]\n",
-      "[[array([1, 2, 3, 4, 5, 6, 7, 8]), array([17, 18, 19, 20, 21, 22, 23, 24]), array([33, 34, 35, 36, 37, 38, 39, 40]), array([49, 50, 51, 52, 53, 54, 55, 56]), array([65, 66, 67, 68, 69, 70, 71, 72]), array([81, 82, 83, 84, 85, 86, 87, 88]), array([ 97,  98,  99, 100, 101, 102, 103, 104]), array([113, 114, 115, 116, 117, 118, 119, 120])], [array([ 9, 10, 11, 12, 13, 14, 15, 16]), array([25, 26, 27, 28, 29, 30, 31, 32]), array([41, 42, 43, 44, 45, 46, 47, 48]), array([57, 58, 59, 60, 61, 62, 63, 64]), array([73, 74, 75, 76, 77, 78, 79, 80]), array([89, 90, 91, 92, 93, 94, 95, 96]), array([105, 106, 107, 108, 109, 110, 111, 112]), array([121, 122, 123, 124, 125, 126, 127, 128])]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def decoupe_bloc(matrice):\n",
     "    lignes = matrice.shape[0]\n",
@@ -292,11 +276,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
     "def applique_trans(liste_bloc):\n",
+    "    liste_bloc = np.array(liste_bloc)\n",
     "    for i in range(len(liste_bloc)):\n",
     "        liste_bloc[i] = dct2(liste_bloc[i])\n",
     "    return liste_bloc"
@@ -311,6 +296,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def applique_seuil(liste_bloc, seuil):\n",
+    "    for i in range(len(liste_bloc)):\n",
+    "        for j in range(len(liste_bloc[0])):\n",
+    "            for k in range(len(liste_bloc[0][0])):\n",
+    "                for l in range(len(liste_bloc[0][0][0])):\n",
+    "                    if liste_bloc[i][j][k][l] < seuil:\n",
+    "                        liste_bloc[i][j][k][l] = 0\n",
+    "    return"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -320,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 161,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-08T14:44:30.145282Z",
@@ -382,30 +383,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "43.60365608263673\n"
+      "4602\n",
+      "4602\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Too many dimensions: 4 > 3.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\arias\\OneDrive\\Bureau\\Projet IN202\\Projet-IN202\\projet.ipynb Cellule 27\u001b[0m in \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/arias/OneDrive/Bureau/Projet%20IN202/Projet-IN202/projet.ipynb#X34sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m mode_1 \u001b[39m=\u001b[39m applique_seuil(applique_trans(decoupe_bloc(padding(RGB_en_YCbCR(test)))),\u001b[39m10\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/arias/OneDrive/Bureau/Projet%20IN202/Projet-IN202/projet.ipynb#X34sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m mode_2 \u001b[39m=\u001b[39m applique_seuil(applique_trans(decoupe_bloc(padding(sous_echantillonnage(RGB_en_YCbCR(test))))),\u001b[39m10\u001b[39m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/arias/OneDrive/Bureau/Projet%20IN202/Projet-IN202/projet.ipynb#X34sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m Image\u001b[39m.\u001b[39;49mfromarray(mode_0,\u001b[39m'\u001b[39;49m\u001b[39mRGB\u001b[39;49m\u001b[39m'\u001b[39;49m)\u001b[39m.\u001b[39mshow()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/arias/OneDrive/Bureau/Projet%20IN202/Projet-IN202/projet.ipynb#X34sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m Image\u001b[39m.\u001b[39mfromarray(mode_1,\u001b[39m'\u001b[39m\u001b[39mRGB\u001b[39m\u001b[39m'\u001b[39m)\u001b[39m.\u001b[39mshow()\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\PIL\\Image.py:3103\u001b[0m, in \u001b[0;36mfromarray\u001b[1;34m(obj, mode)\u001b[0m\n\u001b[0;32m   3101\u001b[0m \u001b[39mif\u001b[39;00m ndim \u001b[39m>\u001b[39m ndmax:\n\u001b[0;32m   3102\u001b[0m     msg \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mToo many dimensions: \u001b[39m\u001b[39m{\u001b[39;00mndim\u001b[39m}\u001b[39;00m\u001b[39m > \u001b[39m\u001b[39m{\u001b[39;00mndmax\u001b[39m}\u001b[39;00m\u001b[39m.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m-> 3103\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(msg)\n\u001b[0;32m   3105\u001b[0m size \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m \u001b[39mif\u001b[39;00m ndim \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m \u001b[39melse\u001b[39;00m shape[\u001b[39m1\u001b[39m], shape[\u001b[39m0\u001b[39m]\n\u001b[0;32m   3106\u001b[0m \u001b[39mif\u001b[39;00m strides \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
+      "\u001b[1;31mValueError\u001b[0m: Too many dimensions: 4 > 3."
      ]
     }
    ],
    "source": [
     "test = load(\"test.png\")\n",
-    "testYCbCr = YCbCR_en_RGB(RGB_en_YCbCR(test))\n",
+    "\n",
+    "#testYCbCr = YCbCR_en_RGB(RGB_en_YCbCR(test))\n",
     "#Image.fromarray(test,'RGB').show()\n",
     "#Image.fromarray(testYCbCr,'RGB').show()\n",
     "\n",
-    "padded_image = padding(testYCbCr)\n",
+    "#padded_image = padding(testYCbCr)\n",
     "\n",
     "#Image.fromarray(padded_image,'RGB').show()\n",
     "#Image.fromarray(unpadding(padded_image, test),'RGB').show()\n",
     "\n",
-    "Image.fromarray(YCbCR_en_RGB(mult_mat(sous_echantillonnage(RGB_en_YCbCR(test)))),'RGB').show()\n",
-    "print(psnr(test, YCbCR_en_RGB(mult_mat(sous_echantillonnage(RGB_en_YCbCR(test))))))"
+    "#Image.fromarray(YCbCR_en_RGB(mult_mat(sous_echantillonnage(RGB_en_YCbCR(test)))),'RGB').show()\n",
+    "#print(psnr(test, YCbCR_en_RGB(mult_mat(sous_echantillonnage(RGB_en_YCbCR(test))))))\n",
+    "\n",
+    "mode_0 =applique_trans(decoupe_bloc(padding(RGB_en_YCbCR(test))))\n",
+    "mode_1 = applique_seuil(applique_trans(decoupe_bloc(padding(RGB_en_YCbCR(test)))),10)\n",
+    "mode_2 = applique_seuil(applique_trans(decoupe_bloc(padding(sous_echantillonnage(RGB_en_YCbCR(test))))),10)\n",
+    "\n",
+    "Image.fromarray(mode_0,'RGB').show()\n",
+    "Image.fromarray(mode_1,'RGB').show()"
    ]
   }
  ],
