--- a/projet.ipynb
+++ b/projet.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 174,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-08T14:44:30.145282Z",
@@ -361,8 +361,6 @@
    },
    "outputs": [],
    "source": [
-    "#ecrire dans un fichier\n",
-    "\n",
     "def ecrire_fichier(image, mode):\n",
     "    f = open(\"fichier.txt\", \"w\")\n",
     "    f.write(f\"SJPG\\n{str(len(image[0]))} {str(len(image[0][0]))}\\n{mode}\\nRLE\")"
@@ -378,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,23 +490,21 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Tests "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4602\n",
-      "4602\n"
-     ]
-    },
     {
      "ename": "ValueError",
      "evalue": "Too many dimensions: 4 > 3.",
@@ -516,7 +512,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\arias\\OneDrive\\Bureau\\Projet IN202\\Projet-IN202\\projet.ipynb Cellule 27\u001b[0m in \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/arias/OneDrive/Bureau/Projet%20IN202/Projet-IN202/projet.ipynb#X34sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m mode_1 \u001b[39m=\u001b[39m applique_seuil(applique_trans(decoupe_bloc(padding(RGB_en_YCbCR(test)))),\u001b[39m10\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/arias/OneDrive/Bureau/Projet%20IN202/Projet-IN202/projet.ipynb#X34sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m mode_2 \u001b[39m=\u001b[39m applique_seuil(applique_trans(decoupe_bloc(padding(sous_echantillonnage(RGB_en_YCbCR(test))))),\u001b[39m10\u001b[39m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/arias/OneDrive/Bureau/Projet%20IN202/Projet-IN202/projet.ipynb#X34sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m Image\u001b[39m.\u001b[39;49mfromarray(mode_0,\u001b[39m'\u001b[39;49m\u001b[39mRGB\u001b[39;49m\u001b[39m'\u001b[39;49m)\u001b[39m.\u001b[39mshow()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/arias/OneDrive/Bureau/Projet%20IN202/Projet-IN202/projet.ipynb#X34sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m Image\u001b[39m.\u001b[39mfromarray(mode_1,\u001b[39m'\u001b[39m\u001b[39mRGB\u001b[39m\u001b[39m'\u001b[39m)\u001b[39m.\u001b[39mshow()\n",
+      "\u001b[1;32mc:\\Users\\arias\\OneDrive\\Bureau\\Projet IN202\\Projet-IN202\\projet.ipynb Cellule 38\u001b[0m in \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/arias/OneDrive/Bureau/Projet%20IN202/Projet-IN202/projet.ipynb#X34sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m mode_1 \u001b[39m=\u001b[39m applique_seuil(applique_trans(decoupe_bloc(padding(RGB_en_YCbCR(test)))),\u001b[39m10\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/arias/OneDrive/Bureau/Projet%20IN202/Projet-IN202/projet.ipynb#X34sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m mode_2 \u001b[39m=\u001b[39m applique_seuil(applique_trans(decoupe_bloc(padding(sous_echantillonnage(RGB_en_YCbCR(test))))),\u001b[39m10\u001b[39m)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/arias/OneDrive/Bureau/Projet%20IN202/Projet-IN202/projet.ipynb#X34sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m Image\u001b[39m.\u001b[39;49mfromarray(mode_0,\u001b[39m'\u001b[39;49m\u001b[39mRGB\u001b[39;49m\u001b[39m'\u001b[39;49m)\u001b[39m.\u001b[39mshow()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/arias/OneDrive/Bureau/Projet%20IN202/Projet-IN202/projet.ipynb#X34sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m Image\u001b[39m.\u001b[39mfromarray(mode_1,\u001b[39m'\u001b[39m\u001b[39mRGB\u001b[39m\u001b[39m'\u001b[39m)\u001b[39m.\u001b[39mshow()\n",
       "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\PIL\\Image.py:3103\u001b[0m, in \u001b[0;36mfromarray\u001b[1;34m(obj, mode)\u001b[0m\n\u001b[0;32m   3101\u001b[0m \u001b[39mif\u001b[39;00m ndim \u001b[39m>\u001b[39m ndmax:\n\u001b[0;32m   3102\u001b[0m     msg \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mToo many dimensions: \u001b[39m\u001b[39m{\u001b[39;00mndim\u001b[39m}\u001b[39;00m\u001b[39m > \u001b[39m\u001b[39m{\u001b[39;00mndmax\u001b[39m}\u001b[39;00m\u001b[39m.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m-> 3103\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(msg)\n\u001b[0;32m   3105\u001b[0m size \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m \u001b[39mif\u001b[39;00m ndim \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m \u001b[39melse\u001b[39;00m shape[\u001b[39m1\u001b[39m], shape[\u001b[39m0\u001b[39m]\n\u001b[0;32m   3106\u001b[0m \u001b[39mif\u001b[39;00m strides \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
       "\u001b[1;31mValueError\u001b[0m: Too many dimensions: 4 > 3."
      ]
